Further small update

--- a/Risk RL Main file.ipynb
+++ b/Risk RL Main file.ipynb
@@ -597,6 +597,8 @@
     "            front_line_units.append(t_num_units)\n",
     "            \n",
     "            if t_num_units < min_front_line_units:\n",
+    "                # Determine whether the current territory is the weakest territory\n",
+    "                #     on this player's border\n",
     "                min_front_line_units = t_num_units\n",
     "                weakest_link = t_index\n",
     "            \n",
